@@ -2,6 +2,10 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  05 Jun 2015; Justin Lecher <jlec@gentoo.org> clblas-2.2.ebuild,
+  clblas-9999.ebuild:
+  sci-libs/clblas: Move to python-single-r1.eclass
+
   05 Jun 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
   sci-libs/clblas: Add github to remote-id in metadata.xml
 
